--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgPositionFundingDetail.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgPositionFundingDetail.jrxml
@@ -485,9 +485,9 @@
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="186"
+						x="182"
 						y="105"
-						width="102"
+						width="106"
 						height="12"
 						key="textField-24"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -717,7 +717,7 @@
 				</line>
 				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="126"
+						x="124"
 						y="133"
 						width="23"
 						height="12"
@@ -730,7 +730,7 @@
 				</textField>
 				<line direction="TopDown">
 					<reportElement
-						x="126"
+						x="124"
 						y="146"
 						width="23"
 						height="1"
@@ -847,11 +847,11 @@
 						key="line-69"/>
 					<graphicElement stretchType="NoStretch"/>
 				</line>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="186"
+						x="182"
 						y="119"
-						width="33"
+						width="40"
 						height="12"
 						key="textField-164"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -862,16 +862,16 @@
 				</textField>
 				<line direction="TopDown">
 					<reportElement
-						x="186"
+						x="182"
 						y="118"
-						width="102"
+						width="106"
 						height="0"
 						key="line-71"/>
 					<graphicElement stretchType="NoStretch"/>
 				</line>
 				<line direction="TopDown">
 					<reportElement
-						x="186"
+						x="182"
 						y="132"
 						width="32"
 						height="1"
@@ -880,7 +880,7 @@
 				</line>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="126"
+						x="124"
 						y="119"
 						width="56"
 						height="12"
@@ -893,9 +893,9 @@
 				</textField>
 				<line direction="TopDown">
 					<reportElement
-						x="126"
+						x="124"
 						y="132"
-						width="56"
+						width="54"
 						height="1"
 						key="line-73"/>
 					<graphicElement stretchType="NoStretch"/>
@@ -1047,7 +1047,7 @@
 				</textField>
 				<line direction="TopDown">
 					<reportElement
-						x="224"
+						x="222"
 						y="146"
 						width="34"
 						height="1"
@@ -1056,7 +1056,7 @@
 				</line>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="186"
+						x="182"
 						y="133"
 						width="33"
 						height="12"
@@ -1069,7 +1069,7 @@
 				</textField>
 				<line direction="TopDown">
 					<reportElement
-						x="186"
+						x="182"
 						y="146"
 						width="32"
 						height="1"
@@ -1386,11 +1386,11 @@
 					</textElement>
 				<textFieldExpression   class="java.math.BigDecimal"><![CDATA[$F{percentChange}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="506"
 						y="0"
-						width="26"
+						width="28"
 						height="12"
 						key="textField-186"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -1414,7 +1414,7 @@
 				</textField>
 				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="126"
+						x="124"
 						y="12"
 						width="23"
 						height="12"
@@ -1464,9 +1464,9 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{csfAmount}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="126"
+						x="124"
 						y="0"
 						width="56"
 						height="12"
@@ -1479,7 +1479,7 @@
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="186"
+						x="182"
 						y="0"
 						width="33"
 						height="12"
@@ -1583,7 +1583,7 @@
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="186"
+						x="182"
 						y="12"
 						width="33"
 						height="12"
