KULBUD-156 remove all stretch with overflow true settings

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgAccountSummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgAccountSummary.jrxml
@@ -1235,11 +1235,11 @@
 		</columnFooter>
 		<pageFooter>
 			<band height="24"  isSplitAllowed="true" >
-				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="9"
 						y="12"
-						width="329"
+						width="426"
 						height="12"
 						key="textField-74"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
