--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgLevelSummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgLevelSummary.jrxml
@@ -1575,7 +1575,7 @@
 		</columnFooter>
 		<pageFooter>
 			<band height="24"  isSplitAllowed="true" >
-				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="9"
 						y="12"
